<resources>
    <string name="app_name">SasakiCalc2022</string>
    <string name="opAdd">＋</string>
    <string name="opSub">－</string>
    <string name="opEq">=</string>
    <string name="opMul">×</string>
    <string name="opDiv">÷</string>
    <string name="CA">CA</string>
    <string name="conditionOk">OK</string>
    <string name="conditionDiv0">Div0</string>
    <string name="conditionOverflow">Overflow</string>
    <string name="conditionBadFormat">Bad format</string>
    <string name="plusMinus">+/-</string>
    <string name="number1">1</string>
    <string name="number2">2</string>
    <string name="number3">3</string>
    <string name="number4">4</string>
    <string name="number5">5</string>
    <string name="number6">6</string>
    <string name="number9">9</string>
    <string name="number8">8</string>
    <string name="number7">7</string>
    <string name="number0">0</string>
    <string name="CE">CE</string>
</resources>